[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envvars"
dynamic = ["version"]
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = {file = "LICENSE"}
description = "Manage envvars with ease."


[tool.setuptools_scm]
